--- a/page2.html
+++ b/page2.html
@@ -100,7 +100,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Thank you!</h1>
+        <h1>Люблю тебя!</h1>
         <div class="heartContainer">
             <div class="bigHeart">
         </div>
