Updated popup text

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ button:hover {
         <div class="popup-count-1">Ты уверена?</div>
         <div class="popup-count-2">Ты что, не хочешь поиграть?<img class="demon slightly-angry" src="images/processed_image_1.png"></div>
         <div class="popup-count-3">Я начинаю злиться.<img class="demon angry" src="images/processed_image_2.png"></div>
-        <div class="popup-count-4">Теперь я действительно зол.<img class="demon really-angry" src="images/processed_image_3.png"></div>
+        <div class="popup-count-4">Ты не оставила мне выбора.<img class="demon really-angry" src="images/processed_image_3.png"></div>
     </div>
     <div class="images">
         <img src="./images/gamepad.png" alt="будь моей Валентинкой">
